# deribit-options-strategy-engine

./: .env.example  .env.example_sub  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  bot  pyproject.toml  requirements-dev.txt  requirements.txt
deribit_demo/: __init__.py  backtest.py  backtest_data.py  book.py  cli.py  client.py  config.py  current_stress.py  engine.py  env_layout.py  exceptions.py  fee_snapshot_store.py  fees.py  frontend_server.py  investor_cash_flow.py  investor_fee_report.py  investor_fee_report_csv.py  investor_fee_report_pdf.py  investor_fee_report_period.py  investor_frontend_launchd.py  investor_launchd_common.py  investor_live_launchd.py  investor_nav_snapshot.py  investor_ops.py  investor_registry.py  margin.py  metrics_store.py  models.py  param_scan.py  realized_summary.py  report_md.py  state.py  strategy.py  stress.py  structured_log.py  trade_journal.py  trade_journal_backfill.py  utils.py
deribit_engine/: __init__.py  backtest.py  book.py  bull_put_settlement.py  client.py  cloudflared_launchd.py  config.py  covered_call_settlement.py  cross_book_flow.py  current_stress.py  entry_gates.py  env_layout.py  exceptions.py  exchange_throttle.py  exit_eval.py  exit_reasons.py  fee_account.py  fee_discount.py  fee_payout.py  fees.py  frontend_ledger_backfill.py  hedge_orders.py  hedge_pnl.py  investor_cash_flow.py  investor_fee_config.py  investor_fee_report.py  investor_fee_report_csv.py  investor_fee_report_pdf.py  investor_fee_report_period.py  investor_launchd_common.py  investor_live_launchd.py  investor_nav_snapshot.py  investor_ops.py  investor_registry.py  live_heartbeat.py  margin.py  market_snapshot_store.py  models.py  param_scan.py  portal_snapshot_service.py  (+17 more)
docs/: cli-zh-TW.md  cloudflare-access-checklist-zh-TW.md  cloudflare-tunnel-investor.md  configuration-zh-TW.md  dashboard-zh-TW.md  design-notes-zh-TW.md  getting-started-zh-TW.md  investor-fee-disclosure-en.md  investor-fee-disclosure-zh-TW.md  investor-onboarding-zh-TW.md  investor-risk-tiers-apr-zh-TW.md  live-profiles-launchd-zh-TW.md  live-profiles-systemd-zh-TW.md  operator-onboarding-zh-TW.md  optimization-plan-zh-TW.md  repo-layout-zh-TW.md  strategies-zh-TW.md  telegram-alerts-zh-TW.md
frontend/: README.md  app-investor.js  app.js  build.mjs  index.html  investor.html  investor.zh.html  package-lock.json  package.json  playwright.config.js  styles.css  tailwind.config.js  tailwind.css  tokens.css
scripts/: README.md  align_premium_swap.py  backfill_ledger_equity_native.py  backfill_state_apr.py  check_dashboard_modules.mjs  check_live_heartbeat.py  cleanup_legacy_layout.sh  fix_dashboard_modules.mjs  frontend_launchd_all.sh  generate_investor_fee_disclosure_pdf.py  generate_investor_onboarding_pdf.py  generate_investor_strategy_pdf.py  live_launchd_all.sh  (+9 more)
(+173 files in other folders)
