[project]
name = "deribit-options-strategy-engine"
version = "0.1.0"
description = "Deribit BTC/ETH options strategy engine with multi-investor ops"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31,<3",
    "python-dotenv>=1.0,<2",
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "reportlab>=4.0,<5",
    "matplotlib>=3.8,<4",
    "numpy>=1.26,<3",
    "pillow>=10.0,<12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<10",
    "ruff>=0.9,<1",
    "pre-commit>=4,<5",
    "httpx>=0.27,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["deribit_demo"]
omit = ["deribit_demo/__main__.py"]

[tool.coverage.report]
fail_under = 60
show_missing = true
skip_covered = true

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = [".pip_packages", ".venv"]

[tool.ruff.lint]
select = ["F", "I"]
ignore = [
    "F841",  # unused locals — clean up incrementally
]

[tool.ruff.lint.per-file-ignores]
"tests/conftest.py" = ["E402"]
"scripts/*.py" = ["E402"]
